--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   }
 
   #root {
-    @apply min-h-screen;
+    @apply min-h-screen min-w-80;
   }
 }
 
@@ -15,6 +15,8 @@
   --color-primary: #020916;
   --color-second: #CEFF7E;
   --color-border: #1F2937;
+
+--breakpoint-m: 845px;
 
   --font-dm-sans: "DM Sans", sans-serif;
 }
