--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   }
 
   #root {
-    @apply min-h-screen min-w-80 flex flex-col items-center;
+    @apply min-h-screen min-w-80 flex flex-col items-center relative overflow-clip;
   }
 }
 
